07. supervise.c: BUG: status file truncated before announce
08. svc.c: added -W option to wait for service to be down
09. svc.c: added -T timeout option for -w, -W options
10. supervise.c: open supervise/dn fifo in read mode after service goes down
11. svscan.c, supervise.c: renamed SERVICEDIR to SCANDIR
12. svscan.c: set PPID in main() to eliminate memory allocation failure in
    child

* Tue Aug 06 2024 12:48:42 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.5-1.1%{?dist}
Release 1.1.5-1.1 Start 05/02/2024 End 06/08/2024
- 05/03/2024
01. minisvc: mount /etc/indimail/resolv.conf when UNSHARE is set
02. minisvc: updated create_cert function - synced with svctool
03. minisvc: added --update-certs option from svctool
- 11/03/2024
04. installer.c: fixed displaying size variable, fixed allocation of zerobuf
    variable
- 01/04/2024
05. supervise.c: set PPID env variable for child
06. supervise.c: added comments, updated variable name for flagwant, spid arg
- 12/04/2024
07. daemontools.spec.in, debian/preinst.in: fixed logdir permissions
08. minisvc.in: fix for missing qmail group
- 09/05/2024
09. fix discarded-qualifier compiler warnings
- 15/05/2024
10. daemontools.spec: fixed syntax error for opensuse
- 20/06/2024
11. svps.in: display services for all svscan instances
- 01/07/2024
12. svps.in: added stop/start all services functions
13. daemntools.spec: stop/start all services during upgrade
14. debian/postinst.in, debian/prerm.in: stop/start all services during
    upgrade

* Sun Mar 03 2024 12:20:15 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.4-1.1%{?dist}
Release 1.1.4-1.1 Start 09/02/2024 End 03/02/2024
- 09/02/2024
01. installer.c, supervise.c: replace chown, chmod with fchown, fchmod
02. Makefile: test presence of unlinkat() for multilog
- 10/02/2024
03. installer.c: removed unused options and fixed check option for fixing
    permissions
- 10/02/2024
04. installer.c: added 'z' option to create files with fized number of zeros.